HREOS-0000: Mejoras sonar